src/objects/Story__c.object
<CustomObject>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Tech Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Name__c</fullName>
        <label>Story Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Story</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>